# routes/routes.go
@@ -9,13 +9,13 @@ import (
 
 func InitRoutes(e *echo.Echo) {
 	// User
-	e.POST("/api/user/create", controllers.Register)
-	e.POST("/api/user/login", controllers.Login)
+	e.POST("/api/auth/register", controllers.Register)
+	e.POST("/api/auth/login", controllers.Login)
 	// Todo
 	e.GET("/api/todos", controllers.GetTodos)
 	e.GET("/api/todos/:id", controllers.GetTodoById)
 	// protected routes
-	e.POST("/api/todo/create", controllers.CreateTodo, middleware.JWTMiddleware)
+	e.POST("/api/todos/create", controllers.CreateTodo, middleware.JWTMiddleware)
 	e.PUT("/api/todos/update/:id", controllers.UpdateTodo, middleware.JWTMiddleware)
 	e.DELETE("/api/todos/delete/:id", controllers.DeleteTodo, middleware.JWTMiddleware)
 	
